<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false" translateable="false">Mensa UPB</string>


    <!-- main action bar -->
    <string name="change_location">Ortswechsel</string>
    <string name="refresh">Aktualisieren</string>
    <string name="settings">Einstellungen</string>


    <!-- about -->
    <string name="aboutText"><![CDATA[MensaUPB ist ein Neubau von
        <a href=“https://plus.google.com/112214633916360855280”>David Maichers</a> und <a href="https://plus.google.com/104836562609964067147">Tony Lemkes</a> Mensa App für die Uni Paderborn: Mensa UPB.<br/>
        Diese zeigt für die kommenden Tage an, was es in unserer Mensa zu essen gibt. Dazu wurde in der ursprünglichen Version eine XML vom Studentenwerk runtergeladen und gecached, bis sie nicht mehr verwendet werden konnte. Es wurde damals vom Studentenwerk untersagt, diese App im Play Store zu vertreiben - daher wurde sie damals wieder entfernt.<br/>
<br/>
Mittlerweile kooperiert das Studentenwerk mit Entwicklern und stellt eine Schnittstelle bereit, über die die Speisepläne heruntergeladen werden können; daher wurde die App zu einem Großteil neu geschrieben und ist nun endlich wieder im PlayStore ;)
]]></string>
    <string name="dependencies"><![CDATA[
MensaUPB ist Open Source. Den Quellcode findest du auf <a href=“http://github.com/ironjan/MensaUPB”>github</a>. Feedback und Fehlermeldungen können via Email an <a href="mailto:lippertsjan+mensaupb@gmail.com?subject=MensaUPB">lippertsjan@gmail.com</a> gesendet werden.<br>
<br>
        Die Speisepläne werden über eine Schnittstelle des Studentenwerk Paderborns abgerufen. Näheres dazu <a href="http://www.studentenwerk-pb.de/gastronomie/speiseplaene/">hier</a><br>
<br>
        Des weiteren benutzt die folgenden Open Source Bibliotheken:]]></string>

    <string name="dependencyNames" translatable="false"><![CDATA[* <a href=“https://github.com/excilys/androidannotations/”>Androidannotations</a>, <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License 2.0</a><br>
 * <a href="http://developer.android.com/tools/support-library/index.html">Android support libraries v4 and v7, <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License 2.0</a><br>
 * <a href="http://www.slf4j.org/android/">SLF4J-android</a>, <a href="http://www.slf4j.org/license.html">MIT License</a><br>
 * <a href="http://ormlite.com/">ormlite</a>, <a href="http://ormlite.com/javadoc/ormlite-core/doc-files/ormlite_9.html#License">ormlite license</a><br>
 * <a href="http://android-holo-colors.com/">android-holo-colors</a>
    ]]></string>
    <!--menu-->
    <string name="source">&lt;a href="http://www.studentenwerk-pb.de/gastronomie/speiseplaene/>Quelle der Speisepläne: Studentenwerk Paderborn&lt;/a></string>
    <string name="about">Über die App</string>
    <string name="menusLoading1">Speisepläne werden geladen. Dies könnte beim ersten Start einige Minuten dauern.</string>
    <string name="menusLoading2">Die Pläne werden jedoch auf dem Gerät gespeichert - beim nächsten Mal sind sie sofort verfügbar ;)\n
\n
(Wenn an einem Tag eines der Restaurants geschlossen hat, wird dieser Ladebildschirm gezeigt. Das werde ich aber bei Gelegenheit ändern.)</string>
    <string name="about_open_source">Open Source</string>

    <string name="devHeader">Entwickler</string>
    <string name="devNames" translatable="false" translateable="false">David Maicher\nTony Lemke\nJan Lippert\nChristian Brüggemann</string>

    <string name="localizedDatePattern">EE, dd.MM.yyyy</string>
    <string name="allergensHeader">Allergene und Zusatzstoffe</string>

    <string name="campusMensae">Campus Mensae</string>
    <string name="nameMensaAcademica" translatable="false">Mensa Academica</string>
    <string name="nameMensaForum" translatable="false">Mensa Forum</string>
    <string name="nameBistroHotspot" translatable="false">Bistro Hotspot</string>
    <string name="nameGrillCafe" translatable="false">Grill | Café</string>
    <string name="nameCafete" translatable="false">Caféte</string>


    <string name="empty" translatable="false"/>
    <string name="colored">Farbstoffe</string>
    <string name="conserved">Konservierungsstoffe</string>
    <string name="antioxidants">Antioxidationsmittel</string>
    <string name="tasteEnhancer">Geschmacksverstärker</string>
    <string name="phosphate">Phosphat</string>
    <string name="sulfured">Geschwefelt</string>
    <string name="waxed">Gewachst</string>
    <string name="blackened">Geschwärzt</string>
    <string name="sweetener">Süßungsmittel</string>
    <string name="phenylalanine">Phenylalaninquelle enthalten</string>
    <string name="taurine">Taurin</string>
    <string name="nitrate_salt">Nitratpökelsalz</string>
    <string name="caffeine">Koffein</string>
    <string name="quinine">Chinin</string>
    <string name="lacto_protein">Milcheiweiß</string>
    <string name="crustacean">Krebstiere und Krebstiererzeugnisse</string>
    <string name="eggs">Eier und Eiererzeugnisse</string>
    <string name="fish">Fisch</string>
    <string name="soy">Soja und Sojaerzeugnisse</string>
    <string name="milk">Milch und Milcherzeugnisse (einschließlich Lactose)</string>
    <string name="nuts">Schalenfrüchte sowie daraus hergest. Erzeugnisse</string>
    <string name="celeriac">Sellerie und Sellerieerzeugnisse</string>
    <string name="mustard">Senf und Senferzeugnisse</string>
    <string name="sesame">Sesamsamen und Sesamsamenerzeugnisse</string>
    <string name="sulfates">Schwefeldioxid und Sulfite</string>
    <string name="mollusks">Weichtiere und Weichtiererzeugnisse</string>
    <string name="lupines">Lupinen und Lupinenerzeugnisse</string>
    <string name="gluten">Gluten</string>
    <string name="peanuts">Erdnüsse und Erdnusserzeugnisse</string>

    <string name="lowCalorie">kalorienarm</string>
    <string name="fatFree">fettarm</string>
    <string name="vegetarian">Vegetarisch</string>
    <string name="vegan">Vegan</string>
    <string name="noLactose">laktosefrei</string>
    <string name="noGluten">glutenfrei</string>
    <string name="versionLabel">Version:</string>
    <string name="nothingToEatText">Heute gibt es hier nichts zu essen.\nIst die Einrichtung vielleicht geschlossen?</string>
    <string name="noMenusToday">Einrichtung ist heute vermutlich geschlossen.</string>
    <string name="unacceptableAllergens">Allergene ausschließen</string>
    <string name="unacceptableAdditionals">Zusatzstoffe ausschließen</string>
    <string name="allergensHintAtSTW">Bitte informiere dich ebenfalls auf den Seiten des Studentenwerks und am Ausgabeschalter vor Ort bezüglich enthaltener Allergene und Zusatzstoffe!</string>


    <string name="mensae" formatted="false" translatable="false">mensa-*</string>
    <string name="mensa_academica_paderborn" translatable="false">mensa-academica-paderborn</string>
    <string name="mensa_forum_paderborn" translatable="false">mensa-forum-paderborn</string>
    <string name="cafete" translatable="false">cafete</string>
    <string name="bistro_hotspot" translatable="false">bistro-hotspot</string>
    <string name="grill_cafe" translatable="false">grill-cafe</string>

    <string name="feedbackTemplateBody">Hallo Jan,\n\nich möchte dir folgendes Feedback zu MensaUPB geben:\n\n</string>
    <string name="feedbackTemplateSubject">[MensaUPB %s] Feedback</string>
    <string name="feedbackNoEmailNote">Bitte richte eine App zum Senden von Emails ein.</string>

    <string name="openUntil">Geöffnet bis um %s Uhr.</string>
    <string name="anonymousUserStatistics">Anonyme Nutzungsstatistiken</string>
    <string name="anonymousUserStatisticsExplanation">Um MensaUPB weiter zu verbessern, werden anonyme Nutzungsstatistiken erfasst. Wie oft werden welche Funktionen von MensaUPB genutzt? Sind diese notwenidg? Werden neue Funktionen entdeckt oder nicht? Diese Fragen stelle ich mir als Entwickler und kann diese durch die Statistiken beantworten.</string>
    <string name="anonymousUserStatisticsEnabled">Anonyme Nutzungsstatistik aktiviert</string>
    <string name="anonymousUserStatisticsDisabled">Anonyme Nutzungsstatistik deaktiviert</string>
    <string name="opening_times">Öffnungszeiten</string>
    <string name="betaAllergensAdditionals">Diese Funktion ist noch im Test-Stadium und daher möglicherweise unzuverlässig.</string>
    <string name="feedback_explanation">Du hast einen Fehler gefunden oder eine Anregung? Schick mir einfach eine Email!</string>
    <string name="send_feedback">Feedback geben</string>
    <string name="close">Schließen</string>
    <string name="imade_description_menu_image">Ein Bild des Gerichts</string>
    <string name="menus_listing_could_not_load_menus">Speisepläne konnten für diesen Tag nicht geladen werden. Bitte schau nach, ob du eine Internetverbindung hast *und* ob das Restaurant an diesem Tag geöffnet hat.</string>
</resources>

