<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:minHeight="@dimen/elementMinHeight"
        android:orientation="vertical"
        android:paddingLeft="@dimen/elementMargin"
        android:paddingRight="@dimen/elementMargin">


        <TextView
            android:id="@android:id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/acceptableAdditionals"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textDarkGreen"
            android:textSize="14sp"
            android:textStyle="bold" />

    </FrameLayout>

    <CheckBox
        android:id="@+id/checkBoxAntioxidants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/antioxidants" />

    <CheckBox
        android:id="@+id/checkBoxColored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/colored" />

    <CheckBox
        android:id="@+id/checkBoxTasteEnhancer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/tasteEnhancer" />

    <CheckBox
        android:id="@+id/checkBoxBlackened"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/blackened" />

    <CheckBox
        android:id="@+id/checkBoxSulfured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/sulfured" />

    <CheckBox
        android:id="@+id/checkBoxWaxed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/waxed" />

    <CheckBox
        android:id="@+id/checkBoxCaffeine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/caffeine" />

    <CheckBox
        android:id="@+id/checkBoxConserved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/conserved" />

    <CheckBox
        android:id="@+id/checkBoxLactoProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/lacto_protein" />

    <CheckBox
        android:id="@+id/checkBoxNitrateSalt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/nitrate_salt" />

    <CheckBox
        android:id="@+id/checkBoxPhenylalanine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/phenylalanine" />

    <CheckBox
        android:id="@+id/checkBoxPhosphate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/phosphate" />

    <CheckBox
        android:id="@+id/checkBoxSweetener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/sweetener" />

    <CheckBox
        android:id="@+id/checkBoxQuinine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/quinine" />

    <CheckBox
        android:id="@+id/checkBoxTaurine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/elementMinHeight"
        android:text="@string/taurine" />

</LinearLayout>