<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--beware! appcompat library -> app:showAsAction instead of android:showAsAction-->

    <item
        android:id="@+id/ab_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:title="@string/refresh"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item android:id="@+id/ab_openingTimes"
        android:icon="@drawable/ic_action_alarms_light"
        android:orderInCategory="5"
        android:title="@string/opening_times"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/ab_about"
        android:orderInCategory="90"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>