<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/elementMargin"
        android:layout_height="wrap_content"
        style="@style/TextSubhead"
        android:text="@string/anonymousUserStatistics"
        android:id="@+id/textHeadlineUserMonitoring" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/elementMargin"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/anonymousUserStatisticsExplanation"
        android:id="@+id/textExplanationUserMonitoring" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switchMonitoringEnabled"
        android:layout_marginTop="@dimen/elementMargin"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:textOn="Ja"
        android:textOff="Nein"
        android:text="@string/anonymousUserStatisticsEnabled" />


</LinearLayout>