<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/elementMargin"
    tools:context="de.ironjan.mensaupb.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAppVersionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/elementMargin"
            android:text="Version:"/>

        <TextView
            android:id="@+id/txtAppVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtAppVersionHeader"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/txtAppVersionHeader"/>

        <TextView
            android:id="@+id/textSourceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAppVersionHeader"
            android:layout_marginTop="8dp"
            android:text="@string/source"/>

        <TextView
            android:id="@+id/textSourceLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textSourceLabel"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/textSourceLabel"
            android:text="@string/srcLink"/>

        <TextView
            android:id="@+id/txtAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textSourceLabel"
            android:layout_marginTop="16dp"
            android:text="@string/aboutText"/>


        <TextView
            android:id="@+id/txtOpenSourceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAbout"
            android:layout_marginTop="8dp"
            android:text="@string/about_open_source"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


        <TextView
            android:id="@+id/txtDependencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtOpenSourceHeader"
            android:layout_marginTop="@dimen/elementMargin"/>

        <TextView
            android:id="@+id/txtDependencyNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDependencies"
            android:layout_margin="@dimen/elementMargin"
            android:text="@string/dependencyNames"/>

        <TextView
            android:id="@+id/txtDevHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDependencyNames"
            android:layout_marginTop="8dp"
            android:text="@string/devHeader"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/txtDevNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDevHeader"
            android:text="@string/devNames"/>
    </RelativeLayout>
</ScrollView>